# supervincent

./: .flake8  .gitignore  .pre-commit-config.yaml  .vercelignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DESCRIPCION_SISTEMA_FISCAL_MOMMYSHOPS.md  Dockerfile  ENHANCED_OCR_README.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_SUMMARY.md  README.md  README_ADVANCED_OPTIMIZATIONS.md  README_ALEGRA_UPLOAD.md  README_NEW.md  README_OPTIMIZATIONS.md  README_TAX_SYSTEM.md  REFACTORING_SUMMARY.md  REQUIREMENTS.md  SECURITY.md  USER_JOURNEY_TEST_RESULTS.md  VER-CONTACTOS.md  VERCEL-DEPLOYMENT-NOTES.md  VERCEL-FIX.md  VERCEL-URLS-EXPLAINED.md  alegra_reports.py  alegra_reports_backup.py  cache_manager.py  celery_config.py  check_invoices.py  config.py  config_validator.py  demo_superbincent_integrated.py  demo_tax_system.py  dian_resilience.py  dian_validator.py  (+61 more)
.github/: dependabot.yml
.github/workflows/: ci.yml
backup/: facturas_compra_20251010.txt
compliance_fallback/: compliance_records.json  test_invoice_002_backup.json
config/: accounting_accounts.json  alegra.json  feature_flags.json  logging.json  settings.json  tax_rules.json  tax_rules_CO.json  tax_rules_CO_2025.json  tax_rules_MX.json
data/: suppliers.db
deprecated/: README.md  invoice_processor.py  invoice_processor_complete.py  invoice_processor_conversational.py  invoice_processor_enhanced.py  invoice_processor_v2.py  invoice_processor_v3.py
docker/: prometheus.yml
docker/grafana/dashboards/: betibot-dashboard.json  dashboards.yml
docker/grafana/datasources/: prometheus.yml
docker/nginx/: nginx.conf
docs/: ARCHITECTURE.md
examples/: README.md  demo_both_files.py  demo_token_alegra.py
financial_analysis/: __init__.py  analyzer.py  chart_generator.py  constants.py  data_loader.py  email_sender.py  metrics_calculator.py  report_generator.py
frontend/: .env.local.example  .gitignore  .vercelignore  DEPLOY-QUICK.md  DEPLOY-VERCEL.md  DEPLOY.md  FIX-VERCEL-404.md  IMPLEMENTATION_GUIDE.md  README-DEPLOY.md  README-VERCEL.md  README.md  deploy.sh  next.config.js  package-lock.json  package.json  start.sh  tailwind.config.js  test-endpoints.js  ver-contactos.html  ver-contactos.md
frontend/.next/: build-manifest.json  trace
frontend/.next/server/: _error.js  middleware-build-manifest.js  pages-manifest.json
frontend/.next/server/pages/: _app.js  _document.js  _error.js  index.js
frontend/.next/server/vendor-chunks/: @swc.js  lucide-react.js  next.js
frontend/.next/static/chunks/: _error.js  webpack.js
frontend/.next/static/development/: _buildManifest.js
frontend/.next/static/webpack/: 3d1a919b83a6574e.webpack.hot-update.json  7e4260cf9bf76e88.webpack.hot-update.json  8d4ed5dbaf70d122.webpack.hot-update.json  webpack.051fac80273560ca.hot-update.js  webpack.324c516198c6c0a7.hot-update.js  webpack.38acc2f5d79e73cb.hot-update.js  (+12 more)
frontend/public/: robots.txt  sitemap.xml  ver-contactos-script.js
frontend/src/components/: AgingReportDisplay.tsx  BreakEvenSlider.tsx  BudgetList.tsx  BulkUploadModal.tsx  ContactModal.tsx  CreateInvoiceModal.tsx  FinanceDashboard.tsx  FinancialStrategiesModal.tsx  GeneralLedgerTable.tsx  IndicatorCard.tsx  InvoiceUploadModal.tsx  LedgerBooks.tsx  LoadingSpinner.tsx  TaxCalculationDisplay.tsx  TrialBalanceTable.tsx
frontend/src/pages/: 404.tsx  _app.tsx  _document.tsx  app.tsx  index.tsx  landing.tsx  register.tsx  ver-contactos.tsx
frontend/src/services/: api.ts  financeService.ts
frontend/src/styles/: globals.css
frontend/src/types/: finance.ts
legacy/: debug_image_ocr_v2.py  demo_token_alegra.py  demo_user_interface.py  invoice_processor_final.py  invoice_processor_robust.py  test_accounting_hardening.py  test_alegra_endpoints.py  test_bill_accounts_only.py  test_bill_creation.py  test_bill_with_accounts.py  test_conversational_compra.py  test_fixes.py  test_image_invoice_taxes.py  test_item_structure.py  test_optimizations.py  test_pdf_factura.py  test_pdf_final.py  test_pdf_simple.py  test_real_invoice_taxes.py  test_resilience.py  test_tax_system.py  test_user_journey.py
reports/: aging_20251018_033353.json  aging_20251018_033420.json  aging_20251018_033438.json  cash_flow_20251018_033355.json  cash_flow_20251018_033422.json  cash_flow_20251018_033439.json  security_report.txt  test_report.json
scripts/: create_items_alegra.py  debug_image_ocr.py  deploy.py  setup_dev.sh
src/: __init__.py  exceptions.py
src/api/: __init__.py  app.py  dependencies.py  schemas.py
src/api/handlers/: __init__.py  duplicate_handlers.py  invoice_handlers.py  report_handlers.py
src/api/middleware/: __init__.py  cors.py  error_handlers.py
src/api/routes/: __init__.py  cache.py  health.py  invoice.py  reports.py  reports_helpers.py  tax.py
src/core/: __init__.py  config.py  invoice_processor.py  models.py  parsers.py  security.py  tax_calculator.py
src/core/database/: supplier_database.py
src/core/ocr/: ollama_enhanced_ocr.py  pdf_enhanced_ocr.py  utilities_enhanced_ocr.py  utilities_pdf_enhanced_ocr.py
src/core/parsers/: __init__.py  amount_parser.py  base.py  factory.py  image_parser.py  pdf_parser.py  text_extractor.py
src/core/processors/: enhanced_invoice_processor.py
src/core/validators/: __init__.py  input_validator.py  tax_validator.py
src/integrations/: __init__.py
src/integrations/alegra/: __init__.py  client.py  models.py  reports.py
src/integrations/nanobot/: client.py
src/repositories/: base.py  invoice_repository.py
src/services/: __init__.py  alegra_service.py  async_service.py  cache_service.py  invoice_service.py  ollama_service.py  tax_service.py
src/tasks/: __init__.py  celery_tasks.py
src/utils/: __init__.py  cache.py  config.py  feature_flags.py  logging.py  monitoring.py  security.py
tests/: __init__.py  conftest.py
tests/e2e/: test_full_workflow.py
tests/fixtures/sample_invoices/: sample_invoice.txt
tests/integration/: test_alegra_integration.py  test_invoice_flow.py
tests/unit/: test_parsers.py  test_security.py  test_tax_calculator.py  test_validators.py
(+28 files in other folders)
